# activities

./: AUTHORS  CMakeLists.txt  JIRATest.vala  UrlBuilder.vala
data/: activities.desktop  timeshift.desktop
schemas/: fabien.timeshift.gschema.xml  lp.fabien.cortina.activities.gschema.xml
src/: Activities.vala  CMakeLists.txt  TimeShift.vala  config.vala.cmake
src/Model/: Activity.vala  ActivityListStore.vala  ActivityStore.vala  Backend.vala  DummyBackend.vala  DummyProjects.vala  DummySerializer.vala  FileSerializer.vala  JIRABackend.vala  JIRADeserializer.vala  LocalDateTime.vala  Project.vala  ProjectManager.vala  RemoteBackend.vala  Serializer.vala  Source.vala  SourceManager.vala  SynchronizedBackend.vala  Task.vala  TaskStore.vala
src/Settings/: ProjectDefinitions.vala  SavedState.vala
src/Utils/: JSON.vala  UrlBuilder.vala
src/View/: ActivityCellRenderer.vala  ActivityDetailView.vala  ActivityForm.vala  ActivityList.vala  ActivityListRenderer.vala  ActivityListView.vala  AppMenu.vala  AppToolbar.vala  DateTimePicker.vala  MainWindow.vala
